Add acceptance criteria

--- a/index.html
+++ b/index.html
@@ -15,10 +15,43 @@
     </header>
     <main>
 
+        <section class="manager">
+            <div class="tag_heading">
+                <h2 class="job"></h2>
+                <h3 class="name"></h3>
+            </div>
+            <div class="employee_info">
+                <p class="employee_id"></p>
+                <p class="office_num"></p>
+                <a href="mailto:email@email.com" target="_blank" class="email">Email Link</a>
+            </div>
+        </section>
 
-        <a href="mailto:email@email.com">Email Link</a>
 
-        <a href="https://github.com/${Username}" target="_blank">GitHub Username</a>
+        <section class="engineer">
+            <div class="tag_heading">
+                <h2 class="job"></h2>
+                <h3 class="name"></h3>
+            </div>
+            <div class="employee_info">
+                <p class="employee_id"></p>
+                <a href="https://github.com/${Username}" target="_blank" class="github">GitHub Username</a>
+                <a href="mailto:email@email.com" target="_blank" class="email">Email Link</a>
+            </div>
+        </section>
+
+        <section class="intern">
+            <div class="tag_heading">
+                <h2 class="job"></h2>
+                <h3 class="name"></h3>
+            </div>
+            <div class="employee_info">
+                <p class="employee_id"></p>
+                <p class="school"></p>
+                <a href="mailto:email@email.com" target="_blank" class="email">Email Link</a>
+            </div>
+        </section>
+
 
     </main>
 
